--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -9,6 +9,7 @@
 
 /*logo*/
 .logo
+	position: relative
 	float: left
 	background: url(../../img/logo.png) no-repeat
 	width: 220px
@@ -16,6 +17,7 @@
 	text-indent: -9999px
 	overflow: hidden
 	margin: 0 2rem 0 0
+	z-index: 5
 
 	a
 		display: block
