--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -133,7 +133,9 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 
 .entry-img__title
 	position: absolute
-	+centering-transform()
+	left: 50%
+	top: 50%
+	transform: translate(-50%, -50%)
 	z-index: 10
 	font-size: $font-size-h1
 	color: white
