--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -27,13 +27,13 @@
 /*TYPOGRAPHY*/
 /*======================================================*/
 @import base/typography
-@import components/buttons
-@import components/forms-default
+@import base/buttons
+@import base/forms-default
 
 /*======================================================*/
 /*LAYOUT*/
 /*======================================================*/
-@import partials/layout
+@import base/layout
 
 /*======================================================*/
 /*COMMON*/
