--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -85,17 +85,15 @@ $user-content: user-content !default
 // отступы слева и справа для всего сайта
 $page-layout-space-horizontal: 20px !default
 // максимальная ширина сайта
-$page-layout-width: 1920px + $page-layout-space-horizontal*2 !default
+$page-layout-width: 1920px !default
 // минимальные отступы слева и справа у текствого блока
-$text-layout-space-horizontal: 40px !default
+$text-layout-space-horizontal: 60px !default
 $text-layout-space-horizontal--md: 30px !default
 $text-layout-space-horizontal--sm: 15px !default
 // максимальная ширина текстового блока
-$text-layout-width: 640px + $text-layout-space-horizontal*2 !default
-// минимальные отступы слева и справа у блокоа выходящего за пределы текста
-$flood-layout-space-horizontal: 40px !default
+$text-layout-width: 800px !default
 // максимальная ширина текстового блока выходящего за пределы текста
-$flood-layout-width: 768px + $text-layout-space-horizontal*2 !default
+$flood-layout-width: 1000px !default
 
 // form
 $form-text-color: $text-color-light !default
