--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -239,13 +239,13 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	//list
 	ul,
 	ol
-		margin: $bottom-space 0
+		margin: 0 0 $bottom-space
 		padding: 0
 		list-style: none
 
 		li
 			padding-left: 30px
-			margin: round($bottom-space*0.5) 0
+			margin: 0 0 round($bottom-space*0.5)
 			position: relative
 
 	ul > li::before
