--- a/src/sass/components/_user-form.sass
+++ b/src/sass/components/_user-form.sass
@@ -9,7 +9,7 @@
 	+font($font-size-h2, $line-height-h2)
 	color: $title-color
 	text-align: center
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 .user-form
 	background: $bg-color-alt
@@ -59,7 +59,7 @@
 			img
 				display: block
 				max-width: none
-				margin-bottom: $bottom-space-sm
+				margin-bottom: $bottom-space--sm
 
 				& + input
 					display: block
@@ -70,7 +70,7 @@
 		+clear
 
 		+media('<mob-lg')
-			padding-top: $bottom-space-sm
+			padding-top: $bottom-space--sm
 
 	.form-buttons
 		float: left
