--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -55,6 +55,11 @@
 @import components/feature-list
 
 ///*======================================================*/
+///*VENDOR*/
+///*======================================================*/
+@import vendors/j-filer
+
+///*======================================================*/
 ///*PARTIALS 2*/
 ///*======================================================*/
 @import partials/sidebar
