--- a/src/sass/test-mixins.sass
+++ b/src/sass/test-mixins.sass
@@ -16,18 +16,18 @@
 	+padding-horizontal($text-layout-space-horizontal)
 
 .mx-test .section
-	margin-bottom: $bottom-space-lg
+	margin-bottom: $bottom-space--lg
 
 .mx-test .section__box
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 .mx-subtitle
 	+font-bold
-	margin-bottom: $bottom-space-sm
+	margin-bottom: $bottom-space--sm
 	background-color: white
 
 	.mx-element &
-		padding: $bottom-space-sm
+		padding: $bottom-space--sm
 
 .mx-element
 	background-color: darkolivegreen
