--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -51,9 +51,9 @@ $line-height-h6: round-float($line-height*1.25, 2) !default
 
 
 $bottom-space: round-float($font-size*$line-height, 1) !default
-$bottom-space-sm: round-float($font-size*$line-height*0.5, 1) !default
-$bottom-space-md: round-float($font-size*$line-height*1.5, 1) !default
-$bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
+$bottom-space--sm: round-float($font-size*$line-height*0.5, 1) !default
+$bottom-space--md: round-float($font-size*$line-height*1.5, 1) !default
+$bottom-space--lg: round-float($font-size*$line-height*2, 1) !default
 
 // цвет бренда
 $base-color: tomato !default
