--- a/src/sass/components/_feature-list.sass
+++ b/src/sass/components/_feature-list.sass
@@ -4,7 +4,7 @@
 
 /*feature list
 .feature-list
-	margin-bottom: $bottom-space-md
+	margin-bottom: $bottom-space--md
 
 	&:last-child
 		margin-bottom: 0
@@ -19,7 +19,7 @@
 .feature-list__img
 	float: left
 	width: 25%
-	margin: 0.3em $bottom-space $bottom-space-sm 0
+	margin: 0.3em $bottom-space $bottom-space--sm 0
 
 	+media("<mob-lg")
 		width: auto
@@ -30,7 +30,7 @@
 	overflow: hidden
 
 	h3, p
-		margin-bottom: $bottom-space-sm
+		margin-bottom: $bottom-space--sm
 
 		&:last-child
 			margin-bottom: 0
