--- a/src/sass/fonts/_fonts.sass
+++ b/src/sass/fonts/_fonts.sass
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,400i,700,700i&subset=cyrillic')
 
 // =============================================================================
-// Google Fonts
+// Font Face
 // =============================================================================
 //+font-face("candara-regular", "../fonts/candara/regular/candara", normal, normal, eot woff ttf svg)
 //+font-face("candara-bold", "../fonts/candara/bold/candarab", normal, normal, eot woff ttf svg)
