--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -49,14 +49,18 @@ $line-height-h5: $line-height !default
 $font-size-h6: round-float($font-size*0.75, 1) !default
 $line-height-h6: round-float($line-height*1.25, 2) !default
 
-
 $bottom-space: round-float($font-size*$line-height, 1) !default
-$bottom-space--sm: round-float($font-size*$line-height*0.5, 1) !default
-$bottom-space--md: round-float($font-size*$line-height*1.5, 1) !default
-$bottom-space--lg: round-float($font-size*$line-height*2, 1) !default
+$bottom-space--lg: round-float($font-size*$line-height*3, 1) !default
+$bottom-space--md: round-float($font-size*$line-height*2.0, 1) !default
+$bottom-space--ml: round-float($font-size*$line-height*1.5, 1) !default
+$bottom-space--sm: round-float($font-size*$line-height*0.75, 1) !default
 
 // цвет бренда
 $base-color: tomato !default
+$base-color-alt: lightgreen !default
+// главные контрастные цвета (обычно, белый и черный)
+$text-color-base: black !default
+$bg-color-base: white !default
 // цвет фона страницы
 $bg-color: #e5e5e5 !default
 // цвет фона элементов выделяющихся на страницы
@@ -94,9 +98,13 @@ $text-layout-space-horizontal--sm: 15px !default
 $text-layout-width: 800px !default
 // максимальная ширина текстового блока выходящего за пределы текста
 $flood-layout-width: 1000px !default
+// отступы внутри блочных элементов
+$grid-space: 30px !default
+$grid-space--lg: 20px !default
+$grid-space--sm: 10px !default
 
 // form
-$form-text-color: $text-color-light !default
+$form-text-color: $text-color !default
 $form-placeholder-color: lightgray !default
 $form-bg-color: white !default
 $form-border-color: lightgray !default
@@ -105,20 +113,26 @@ $form-error-color: red !default
 $form-success-color: green !default
 $form-bottom-space: 3rem !default
 $form-bottom-space--sm: 1.5em !default
-$form-gap: 60px !default
-// ==================
-$form-font-size: 16px
-$form-line-height: 24px
-$form-input-height: 50px
+$form-gap: 40px !default
 // ==================
 $checkbox-color: tomato
 // ==================
-$form-input-space-v: 12px
-$form-input-space-h: 18px
-$select-space-v: 12px
-$select-space-h: $form-input-space-h
-$select-arrow-width: 40px
-$select-arrow-height: 100%
+$form-font-size: 16px !default
+$form-line-height: 24px !default
+$form-input-height: 50px !default
+$form-letter-spacing: null !default
+// ==================
+$form-border-width: 2px !default
+$form-input-space-vt: floor(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // верхний паддинг округляем в нижнюю сторону
+$form-input-space-vb: ceil(($form-input-height - $form-line-height - $form-border-width*2)/2) !default // нижний паддинг округляем в верхнюю сторону
+$form-input-space-h: 18px !default
+// ==================
+$select-space-v: 12px !default
+$select-space-h: $form-input-space-h !default
+$select-arrow-width: 40px !default
+$select-arrow-height: 100% !default
+// ==================
+$multiple-item-space: 3px
 
 // btn
 $btn-bg-color: tomato !default
@@ -133,6 +147,7 @@ $table-text-alt-color: white !default
 $table-bg-alt-color: tomato !default
 
 // animation
+$animation-use: false !default
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
 
@@ -175,7 +190,7 @@ $font-alt: 'Roboto Slab', serif !default
 	font:
 		family: $font-alt
 		style: normal
-		weight: 700
+		weight: normal
 
 =font-alt-bold()
 	font:
